--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing = 20>
       <tr>
-        <td><img src="My-CV/image/mohamed.png" alt="My pic" height="150" width="150  ></td>
+        <td><img src="https://github.com/MohamedSbaih/My-CV/blob/main/image/mohamed.png" alt="My pic" height="150" width="150  ></td>
         <td><h1>CURRICULUM VITAE</h1></td>
       </tr>
       <tr>
